# LoaderScript

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.cfg
repo_downloader/: __init__.py  downloader.py  hasher.py
tests/: __init__.py  test_downloader.py  test_hasher.py  test_main.py
